Updated with picture element

--- a/media.html
+++ b/media.html
@@ -25,6 +25,12 @@
       src="media/selfie.jpg"
       alt="Gorgeous image of a doctor"
     />
+    <picture>
+      <source media="(min-width: 650px)" srcset="media/profile.jpg" />
+      <source media="(min-width: 465px)" srcset="media/simface.jpg" />
+      <img src="media/Sims duo.png" />
+    </picture>
+
     <p>
       I’m also passionate about learning new skills, constantly growing and
       evolving in all areas of my life. In addition to my professional pursuits,
