Updating index file

--- a/Assignment1/Index.html
+++ b/Assignment1/Index.html
@@ -24,7 +24,7 @@
         be happening in the clouds above my head.
       </p>
       <p>
-        I’m generally a passionate and driven person and i tend to get excited
+        I’m generally a passionate and driven person and I tend to get excited
         about the journey.Learning and growing is my forte. After completing my
         medical degree, I’ve immersed myself in clinical practice, tried and
         failed a couple of times,gained valuable hands-on experience and
